<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enterAmount">Enter Bill Amount:            </string>
    <string name="selectTip">Select Tip </string>
    <string name="tip">Tip: </string>
    <string name="total">Total: </string>
    <string name="zero">$0.00</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="twentyPercent">20%</string>
</resources>
