<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cornez.com.tipcalculator.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_below="@+id/selectTip"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/tenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenPercent" />

        <RadioButton
            android:id="@+id/fifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteenPercent" />

        <RadioButton
            android:id="@+id/eighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteenPercent" />

        <RadioButton
            android:id="@+id/twentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyPercent" />



    </RadioGroup>


    <TextView
        android:id="@+id/tip"
        android:text="@string/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tipAmount"
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tip"
        android:layout_toEndOf="@+id/selectTip"
        android:layout_marginStart="@dimen/tipAmountTopMargin"
         />

    <TextView
        android:id="@+id/total"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/totalTextMargin"
        android:layout_below="@id/tip"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/totalAmount"
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/total"
        android:layout_alignStart="@+id/tipAmount"
         />

   <!-- <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/total"
        android:layout_alignParentStart="true"
        android:layout_marginTop="71dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1" />

            <Button
                android:text="@string/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2" />

            <Button
                android:text="@string/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn3" />


            <Button
                android:text="@string/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMinus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn4"
                android:text="@string/btn4"/>

            <Button
                android:text="@string/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn5" />

            <Button
                android:text="@string/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn6" />

            <Button
                android:text="@string/btnComma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnComma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn7" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn8" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn9" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDelete" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button18" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button17" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button16" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button15" />
        </TableRow>
    </TableLayout> -->

    <TextView
        android:text="@string/selectTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/selectTipMargin"
        android:id="@+id/selectTip"
        android:layout_below="@+id/editTextAmount"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:ems="10"
        android:id="@+id/editTextAmount"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterAmount"
        android:layout_alignBaseline="@+id/editTextAmount"
        android:layout_alignBottom="@+id/editTextAmount"
        android:layout_alignParentStart="true" />




</RelativeLayout>
